--- a/cve_project/templates/bulletin.html
+++ b/cve_project/templates/bulletin.html
@@ -50,7 +50,7 @@
                         </p>
                     </div>
                     <div class="col bg-light p-3 border"">
-                        <label for="countRange" class="form-label">Размер выборки, количество полученных ответов</label>
+                        <label for="countRange" class="form-label">Размер выборки, максимально возможное кол-во ответов</label>
                         <input name="count" value="{{count}}" type="range" class="form-range" min="20" max="200" step="10" id="countRange">
                         <p>
                             Текущее значение:
